# AndroidNDK

NDKDemo1/app/: build.gradle
NDKDemo1/app/src/androidTest/java/com/canter/ndkdemo1/: ExampleInstrumentedTest.java
NDKDemo1/app/src/main/: AndroidManifest.xml
NDKDemo1/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NDKDemo1/app/src/main/java/com/canter/ndkdemo1/: MainActivity.java
NDKDemo1/app/src/test/java/com/canter/ndkdemo1/: ExampleUnitTest.java
NDKDemo2/app/: build.gradle
NDKDemo2/app/src/main/: AndroidManifest.xml
NDKDemo2/app/src/main/cpp/: native-lib.cpp
NDKDemo2/app/src/main/cpp/head/: com_canter_ndkdemo2_ndk_JniData.h
NDKDemo2/app/src/main/java/com/canter/ndkdemo2/: MainActivity.java
NDKDemo3/app/: build.gradle
NDKDemo3/app/src/androidTest/java/com/canter/ndkdemo3/: ExampleInstrumentedTest.java
NDKDemo3/app/src/main/: AndroidManifest.xml
NDKDemo3/app/src/main/cpp/: com_canter_ndkdemo3_JNIMethod.h  native-lib.cpp
NDKDemo3/app/src/main/java/com/canter/ndkdemo3/: JNIMethod.java  MainActivity.java
NDKDemo3/app/src/main/res/values/: strings.xml
NDKDemo3/app/src/test/java/com/canter/ndkdemo3/: ExampleUnitTest.java
NDKDemo4/app/: build.gradle
NDKDemo4/app/src/main/: AndroidManifest.xml
NDKDemo4/app/src/main/cpp/: native-lib.cpp
NDKDemo4/app/src/main/java/com/canter/ndkdemo4/: MainActivity.java
NDKDemo4/app/src/main/res/values/: strings.xml
NDKDemo5/app/: build.gradle
NDKDemo5/app/src/main/: AndroidManifest.xml
NDKDemo5/app/src/main/cpp/: native-lib.cpp
NDKDemo5/app/src/main/java/com/canter/ndkdemo5/: MainActivity.java
(+3 files in other folders)
